--- a/css.css
+++ b/css.css
@@ -2,11 +2,36 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #adabab;
+    
 }
   
 header {
-    width: 100%;
+    height: 100px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #616060;
+}
+  
+h5 {
+    height: 30px;
+    background: #ececec;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #616060;
+}
+    
+p {
+    height: 70px;
+    padding: 60px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: left;
 }
   
 ul {
@@ -15,14 +40,16 @@ ul {
   
 /* NAV BAR */
 #nav_bar {
-    background: #f2f2f2;
-    border-bottom: solid 2px #e4e4e4;
-    float: right;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    
 }
 
 #nav_bar li {
     display: inline-block;
-    padding: 8px;
+    color: #adabab;
+    padding: 13px;
 }
   
 
@@ -41,32 +68,96 @@ li.nav-links a:hover {
 
 /* FOOTER */
 footer  {
-    background: #f2f2f2;
-    border-top: solid 2px #e4e4e4;
+    background: transparent;
+    border-top: solid 1px #adabab;
   /*   position: fixed; */
     bottom: 0;
     padding-bottom: 0;
     width: 100%;
     
-  }
+}
   
-  footer ul li {
+footer ul li {
     display: inline;
     color: #666666;
     font-size: 14px;
-    padding: 13px;
-  }
+    padding: 12px;
+}
   
-  footer ul {
+footer ul {
     float: left;
     padding: 1px;
-  }
+}
   
-  footer ul a:hover {
+footer ul a:hover {
     text-decoration: underline;
-  }
-  
-  .footer-right {
+}
+
+.footer-right {
     float: right;
-  }
+}
   
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 400px) {
+    li.nav-links a {
+        display: none;
+    }
+      
+    footer {
+        bottom: 0;
+    }
+     
+    footer ul {
+        float: none;
+        padding-bottom: 2px;  
+    }
+     
+    .footer-left {
+        text-align: center;
+        margin: auto; 
+        padding-top: 10px;   
+    }
+
+    .footer-right {
+        float: none;
+        text-align: center;
+    }
+
+}
+   
+@media screen and (max-width: 565px) {
+    li.nav-links a {
+        display: none;
+     }
+     
+    footer {
+    /*bottom: 0;
+      postion: absolute; */
+        position:absolute;
+        bottom:0;
+        width:100%;
+        height:40px;
+    }
+     
+    footer ul {
+        float: none;
+        padding-bottom: 2px;
+    }
+     
+    .footer-left {
+      text-align: center;
+      margin: auto; 
+      padding-top: 10px;
+       
+    }
+     
+    .footer-right {
+      float: none;
+      text-align: center;
+      
+    }
+   }
+   
+   
+   
