--- a/css.css
+++ b/css.css
@@ -8,7 +8,7 @@ body {
 }
   
 header {
-    height: 100px;
+    height: 0px;
     background: transparent;
     display: flex;
     align-items: center;
@@ -18,20 +18,46 @@ header {
   
 h5 {
     height: 30px;
+    margin-top:10px;
     background: #ececec;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #616060;
 }
-    
+
+#button {
+    background-color: crimson;
+} 
+
+#container_newsletter {
+    padding-top: 0px;
+
+}
+
+#sign_up {
+    padding-top: 50px;
+}
+
+h2 {
+    height: 20px;
+    margin-top:50px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #616060;
+
+}
 p {
     height: 70px;
     padding: 60px;
     background: transparent;
     display: flex;
     align-items: center;
-    justify-content: left;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
 }
   
 ul {
@@ -50,6 +76,7 @@ ul {
     display: inline-block;
     color: #adabab;
     padding: 13px;
+    padding-bottom: 0px;
 }
   
 
@@ -66,6 +93,53 @@ li.nav-links a:hover {
     text-decoration: underline;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+  }
+
+/* CAROUSEL */
+
+
+/* Newsletter */
+/* Style the form element with a border around it */
+form {
+    border: 4px solid #f1f1f1;
+  }
+  
+  /* Add some padding and a grey background color to containers */
+  .container {
+    padding: 20px;
+    background-color: white;
+  }
+  
+  /* Style the input elements and the submit button */
+  input[type=text], input[type=submit] {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  
+  /* Add margins to the checkbox */
+  input[type=checkbox] {
+    margin-top: 16px;
+  }
+  
+  /* Style the submit button */
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+  }
+  
+  input[type=submit]:hover {
+    opacity: 0.8;
+  }
 /* FOOTER */
 footer  {
     background: transparent;
